--- a/app/views/bikes/_stolen_checklist.html.haml
+++ b/app/views/bikes/_stolen_checklist.html.haml
@@ -33,11 +33,14 @@
 
     - police_report_present = stolen_record.police_report_number.present?
     - submitted_to_police_services = police_report_present && !serial_unknown
+
+    = render partial: "stolen_checklist_how_to_police_report", locals: { stolen_record: @bike.current_stolen_record, police_report_present: police_report_present }
+
     %li{ class: police_report_present ? "completed-item" : "" }
       %span.checklist-checkbox
         = "&#10003;".html_safe if police_report_present
       %span.checklist-text
-        - bike_link = link_to(t(".a_police_report"), edit_bike_path(id: @bike.to_param, page: "theft_details"))
+        - bike_link = link_to(t(".your_police_report"), edit_bike_path(id: @bike.to_param, page: "theft_details"))
         = t(".add_bike_link_to_your_theft_report_html", bike_link: bike_link)
       %ul
         %li{ class: submitted_to_police_services ? "completed-item" : "" }
