--- a/app/views/bikes/_stolen_checklist_how_to_police_report.html.haml
+++ b/app/views/bikes/_stolen_checklist_how_to_police_report.html.haml
@@ -5,14 +5,12 @@
   %li{ class: police_report_present ? "completed-item" : "" }
     %span.checklist-checkbox
       = "&#10003;".html_safe if police_report_present
-      File a Police report
-
-      A) Online (DigiD required) via this link: https://www.politie.nl/aangifte-of-melding-doen/voorbereiding-aangifte/diefstal-fiets.html
-      Note: DigiD is a digital identification of people living in the NL. Kind of like the Global ID, only on a Dutch governmental level
-      B) By a phone
-      Simply call 0900-8844 (local tariff applies). You will usually get a phone call appointment for later, on which you give Police the information.
-      C) On a police station
-      Search for the closest police stations via this link: https://www.politie.nl/mijn-buurt/politiebureaus
+    %span.checklist-text
+      File a Police report. Here are three ways to do so:
+      %ol
+        %li <strong>Online</strong> <em>DigiD required</em> via: https://www.politie.nl/aangifte-of-melding-doen/voorbereiding-aangifte/diefstal-fiets.html
+        %li <strong>By Phone</strong> call 0900-8844 (local tariff applies). You will usually get a phone call appointment for later, at which point you give Police the information
+        %li <strong>In Person</strong> Search for the closest police station via: https://www.politie.nl/mijn-buurt/politiebureaus
   /   %span.checklist-text
   /     - bike_link = link_to(t(".a_police_report"), edit_bike_path(id: @bike.to_param, page: "theft_details"))
   /     = t(".add_bike_link_to_your_theft_report_html", bike_link: bike_link)
