Add language to admin interface and controller

--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -17,6 +17,8 @@
       %th.d-none.d-lg-table-cell
         Vignettes
       %th
+        Language
+      %th
         Published
     %tbody
       - @blogs.each do |blog|
@@ -37,5 +39,7 @@
               = blog.body_abbr.html_safe if blog.body_abbr
           %td.table-cell-check
             = check_mark if blog.is_listicle
+          %td
+            = t(blog.language, scope: [:locales])
           %td.table-cell-check
             = check_mark if blog.published
