--- a/app/views/admin/news/new.html.haml
+++ b/app/views/admin/news/new.html.haml
@@ -4,7 +4,7 @@
 - url = {action: "create", controller: "news"}
 = form_for [:admin, @blog], :url => url do |f|
   - if @blog.errors.any?
-    = render partial: "/shared/errors", locals: { name: "Blog", obj: @blog }
+    = render partial: "shared/errors", locals: { name: "Blog", obj: @blog }
   .row
     .col-auto
       .form-group
