--- a/app/views/news/index.html.haml
+++ b/app/views/news/index.html.haml
@@ -1,7 +1,11 @@
 #news_display
   %h1.blog-index-head
     = t(".bike_index_blog")
-    = link_to image_tag('feed_icon.svg'), news_index_url(format: 'atom'), { title: t('.bike_index_blog_feed' )}
+    = form_tag nil, method: :get, class: "" do
+      = select_tag(:language,
+        options_for_select(blog_languages, selected: params[:language].presence),
+        class: "display: inline", onchange: "this.form.submit()")
+    = link_to image_tag('feed_icon.svg'), news_index_url(format: 'atom'), { title: t('.bike_index_blog_feed')}
 
   %hr
 %article
