--- a/app/views/news/index.html.haml
+++ b/app/views/news/index.html.haml
@@ -10,11 +10,24 @@
 
     .col-md-12.col-lg-3.blog-language-selection-container
       View posts in
-      = form_tag nil, method: :get, class: "blog-language-selection" do
+      = form_tag nil, method: :get,
+        class: "blog-language-selection", id: "js-blog-language-selection" do
         = select_tag :language,
           options_for_select(blog_languages, selected: params[:language].presence),
           onchange: "this.form.submit()"
   %hr
+
+:javascript
+  const setBlogLanguageSelection = () => {
+    // Set the language drop-down to the currently selected language.
+    // Workaround for the selection sticking when navigating using the back
+    // button.
+    const langOptions = document.querySelector("#js-blog-language-selection #language");
+    const langSelection = document.location.search.split("&").filter(e => e.match("language"));
+    const language = (langSelection[0] || "language=0").split("=")[1];
+    langOptions.selectedIndex = language;
+  }
+  setBlogLanguageSelection()
 
 %article
   %ul.news-index-list
