--- a/app/views/customer_mailer/stolen_bike_alert_email.text.haml
+++ b/app/views/customer_mailer/stolen_bike_alert_email.text.haml
@@ -1,4 +1,5 @@
-= @customer_contact.body.html_safe
+- unless @customer_contact.body == "EMPTY"
+  = @customer_contact.body.html_safe
 
 \--------------------------------
 
