--- a/app/views/customer_mailer/held_bike_email.html.haml
+++ b/app/views/customer_mailer/held_bike_email.html.haml
@@ -1,9 +1,7 @@
-%p= t(".html.we_think_your_stolen_bike_html", bike_title: @bike.title_string)
+%p
+  - bike_link = link_to(@bike.title_string, bike_url(@bike))
+  = t(".html.we_think_your_stolen_bike_html", bike_title: bike_link)
 
-%ul
-  %li= link_to @bike.title_string, bike_url(@bike)
-
-  - if @external_registry_match.present?
-    %li
-      = t(".html.found_on")
-      = link_to @external_registry_match.registry_name, @external_registry_match.url
+%p
+  = t(".html.check_out_match_here")
+  = link_to(@match.title_string, bike_url(@match))
