--- a/app/views/customer_mailer/stolen_bike_alert_email.html.haml
+++ b/app/views/customer_mailer/stolen_bike_alert_email.html.haml
@@ -1,45 +1,46 @@
-- stolen_word = @bike.abandoned ? t(".html.recovered_or_found") : t(".html.stolen")
-- bike_type = @biketype
+- stolen_word = @bike.abandoned? ? t(".html.recovered_or_found") : t(".html.stolen")
 
-%h1{:style => "font-weight: 400; font-size: 30px;"}
-  = t(".html.were_spreading_the_word_about_your_stolen", stolen_word: stolen_word, bike_type: bike_type)
+%h1{style: "font-weight: 400; font-size: 30px;"}
+  = t(".html.were_spreading_the_word_about_your_stolen", stolen_word: stolen_word, bike_type: @bike_type)
 
-%p{:style => ""}
+%p{style: ""}
   = t(".html.we_sent_out_this_tweet_from")
+
   = succeed "," do
-    %a{:href => "https://twitter.com/#{@info[:tweet_account_screen_name]}"}
-      = "@#{@info[:tweet_account_screen_name]}"
-  - if @info[:location].present?
-    = @info[:location]
+    = link_to "@#{@tweet_account_screen_name}", @twitter_account_url
+
+  - if @location.present?
+    = @location
     = t(".html.area")
   = t(".html.stolen_bike_alerter")
 
-%div{:style => "margin: 30px 0 0; border: 1px solid #dfe3ee;border-radius: 4px; padding: 15px 2%; min-height: 120px;"}
-  %div{:style => "width: 10%; float: left; height: 120px;"}
-    %a{:href => "https://twitter.com/#{@info[:tweet_account_screen_name]}"}
-      %img{:src => "#{@info[:tweet_account_image]}", :style => "max-width: 100%;"}/
-  %div{:style => "width: 86%; margin-left: 2%; float: right;"}
-    %a{:href => "https://twitter.com/#{@info[:tweet_account_screen_name]}/status/#{@info[:tweet_id]}", :style => "display: block; text-decoration: none; font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;"}
-      %h3{:style => "font-size: 14px; line-height: 14px; margin: 0; font-weight: bold; color: #333333;"}= @info[:tweet_account_name]
-      %h3{:style => "font-size: 14px; line-height: 17px; margin: 0; color: #999; font-weight: 400;"}
-        = "@#{@info[:tweet_account_screen_name]}"
-    %p{:style => "margin:0;color:#333333;font-family:Georgia,'Times New Roman',serif;font-size:22px;line-height:27px;margin-bottom:0;margin-top:5px;"}
-      = @info[:tweet_string].split('https://bikeindex.org')[0]
-      %a{:href => "https://bikeindex.org/bikes/#{@bike.id}", :style => "border:none;color:#0084b4;text-decoration:none"} Bike Index link
-    %a{:href => "https://twitter.com/#{@info[:tweet_account_screen_name]}/status/#{@info[:tweet_id]}", :style => "display:block;border:none;color:#0084b4;text-decoration:none;color:#999999;font-size: 12px; margin-top: 5px;", :target => "_blank"}= Time.current.strftime("%I:%M %P - %d %b %y")
-- if @info[:retweet_screen_names].present?
-  - retweets = @info[:retweet_screen_names].map{ |sn| "<a href='https://twitter.com/#{sn}'>@#{sn}</a>" }
-  %p{:style => "color: #95A5A5; font-size: .9em; text-align: center; margin: 0 auto; clear: both; padding: .25em 1em .75em; width: 90%; background: #f7f7f7; border: 1px solid #dfe3ee; border-radius: 0 0 4px 4px;"}
-    = t(".html.alert_retweeted_by_html", retweets: retweets.to_sentence.html_safe)
+%div{style: "margin: 30px 0 0; border: 1px solid #dfe3ee;border-radius: 4px; padding: 15px 2%; min-height: 120px;"}
+  %div{style: "width: 10%; float: left; height: 120px;"}
+    = link_to @twitter_account_url do
+      = image_tag @twitter_account_image_url, style: "max-width: 100%;"
+  %div{style: "width: 86%; margin-left: 2%; float: right;"}
+    %a{href: @tweet_url, style: "display: block; text-decoration: none; font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;"}
+      %h3{style: "font-size: 14px; line-height: 14px; margin: 0; font-weight: bold; color: #333333;"}= @tweet_account_name
+      %h3{style: "font-size: 14px; line-height: 17px; margin: 0; color: #999; font-weight: 400;"}
+        = "@#{@tweet_account_screen_name}"
+    %p{style: "margin:0;color:#333333;font-family:Georgia,'Times New Roman',serif;font-size:22px;line-height:27px;margin-bottom:0;margin-top:5px;"}
+      = @info["tweet_string"].split('https://bikeindex.org')[0]
+      %a{href: @bike_url, style: "border:none;color:#0084b4;text-decoration:none"} Bike Index link
+    %a{href: @tweet_url, style: "display:block;border:none;color:#0084b4;text-decoration:none;color:#999999;font-size: 12px; margin-top: 5px;", :target => "_blank"}
+      = Time.current.strftime("%I:%M %P - %d %b %y")
+  - if @retweet_screen_names.present?
+    - retweets = @retweet_screen_names.map{ |sn| "<a href='https://twitter.com/#{sn}'>@#{sn}</a>" }
+    %p{style: "color: #95A5A5; font-size: .9em; text-align: center; margin: 0 auto; clear: both; padding: .25em 1em .75em; width: 90%; background: #f7f7f7; border: 1px solid #dfe3ee; border-radius: 0 0 4px 4px;"}
+      = t(".html.alert_retweeted_by_html", retweets: retweets.to_sentence.html_safe)
 
-%h3{:style => "margin: 2rem 0 1rem"}= t(".html.improve_your_chances_of_recovery_by_doing")
+%h3{style: "margin: 2rem 0 1rem"}= t(".html.improve_your_chances_of_recovery_by_doing")
 
 = render partial: "bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
 
 %hr/
 
-%p{:style => "margin: 50px 0 0; padding: 20px 0 0; font-weight: 400; color: #95A5A5; text-align: center;"}
+%p{style: "margin: 50px 0 0; padding: 20px 0 0; font-weight: 400; color: #95A5A5; text-align: center;"}
   - date = @bike.created_at.strftime("%m.%d.%y")
-  = t(".html.this_email_is_about_the_stolen_bike", was_stolen: stolen_word, bike_type: bike_type, date: date)
+  = t(".html.this_email_is_about_the_stolen_bike", was_stolen: stolen_word, bike_type: @bike_type, date: date)
 
 = render partial: 'shared/email_bike_box', locals: { bike_url: bike_url(@bike) }
