add check_credentials checkbox to form

--- a/app/views/admin/twitter_accounts/_form.html.haml
+++ b/app/views/admin/twitter_accounts/_form.html.haml
@@ -24,6 +24,10 @@
           = f.label :national do
             = f.check_box :national
             national
+        .input-group
+          = label_tag :check_credentials do
+            = check_box_tag :check_credentials
+            Test Twitter connection on update
 
     .col-md-6.mb-4
       .card
