minor translation fix

--- a/app/views/info/lightspeed.html.haml
+++ b/app/views/info/lightspeed.html.haml
@@ -3,7 +3,7 @@
     = t(".how_to_lightspeed_retail")
   %article
     %p.mt-4
-      = t(".this_page_gives_instructions_html", about_url: about_url)
+      = t(".this_page_gives_instructions_html", about_url: about_path)
 
   .video-responsive
     <iframe src="https://www.youtube.com/embed/MKUNw4zfLJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
