add more partners, make it look slightly less shitty

--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -466,6 +466,7 @@
   .root-landing-who-wrap {
     display: none;
     flex-wrap: wrap;
+    justify-content: center; // When things overflow onto additional lines
   }
 
   &.scrolled .root-landing-who-wrap {
