--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -99,6 +99,10 @@
           = image_tag "landing_pages/partners/Santa-Monica-PD.png", alt: "Santa Monica Police Department"
         .root-landing-who-square
           = link_to image_tag("landing_pages/partners/Bike-Portland.png", alt: "Bike Portland"), "https://bikeeastbay.org/Register"
+        .root-landing-who-square
+          = image_tag "landing_pages/partners/Drenthe.png", alt: "Provincie Drenthe"
+        .root-landing-who-square
+          = image_tag("landing_pages/partners/Op-Fietse.png", alt: "Op Fietse")
 
   .root-by-the-numbers
     .container-fluid
