--- a/app/views/layouts/application_bikehub.html.haml
+++ b/app/views/layouts/application_bikehub.html.haml
@@ -12,53 +12,64 @@
   %body{ id: page_id, class:  body_class, style: "padding-top: 0;" }
     -# This is either the signup or signin page
     - signup_page = controller_name != "sessions"
-    %nav.navbar.nav.bikehub-nav
-      .container-fluid
-        .row
+    .bikehub
+      .navbar.nav.bikehub-nav.navbar-expand-md
+        .container-fluid
           %a.bikehub-logo{ href: "https://bikehub.com" }
-            = image_tag "logos/bikehub_logo.png", class: "primary-nav", alt: "BikeHub home"
-          .poweredby
-            %p= t(".powered_by")
-            %a.primary-logo{ href: user_root_url }
-              = image_tag "logo.svg", class: "primary-nav", alt: "Bike Index home"
-          %a.bikehub-nav-item.bikehub-nav-item-first{ href: "https://bikehub.com/contact/" }
-            = t(".contact")
-          %a.bikehub-nav-item{ href: new_user_path(partner: sign_in_partner), class: (signup_page ? "active" : "") }
-            = t(".sign_up")
-          %a.bikehub-nav-item{ href: new_session_path(partner: sign_in_partner), class: (signup_page ? "" : "active") }
-            = t(".log_in")
-    .container.bikehub-explanation.mb-4
-      .row
-        .col-sm-12
-          %h1
-            - if signup_page
-              = t(".bikehub_signup")
-            - else
-              = t(".bikehub_login")
-      .row
-        .col-sm-12
+            = image_tag "bikehub/bikehub_logo.png", alt: "BikeHub home"
+          %span.powered-by-text
+            Powered
+            %br
+            by
+          %a.powered-by-logo{ href: user_root_url }
+            = image_tag "logo.svg", alt: "Bike Index home"
+
+          %button.navbar-toggler{ type: "button", "data-toggle" => "collapse", "data-target" => "#mainNavbarContent", "aria-controls" => "mainNavbarContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation" }
+            %span.navbar-toggler-icon
+
+          .collapse.navbar-collapse#mainNavbarContent
+            %ul.navbar-nav
+              %li.nav-item
+                %a.nav-link{ href: "https://bikehub.com/" }
+                  = t(".home")
+              %li.nav-item
+                %a.nav-link{ href: "https://bikehub.com/contact/" }
+                  = t(".contact")
+              %li.nav-item
+                %a.nav-link{ href: new_user_path(partner: sign_in_partner), class: (signup_page ? "active" : "") }
+                  = t(".register")
+              %li.nav-item
+                %a.nav-link{ href:  new_session_path(partner: sign_in_partner), class: (signup_page ? "" : "active") }
+                  = t(".login")
+
+      .bikehub-signup-landing-page.bikehub-signup-page.landing-page
+        %header.bikehub-banner-header
+          .row.teamed-up-with-bike-index.text-center
+            .col-lg-4.team-title-box
+              %h1
+                = t(".teamed_up")
+              %span.high-five-wrapper
+                = image_tag "bikehub/high-five.svg", alt: "High Five"
+            .col-lg-8
+              %p
+                = t(".non_profit")
+              %p
+                = t(".security")
+              %p
+                = t(".partnership")
+      .bike-hub-login.mt-4
+        %h2
+          = t(".accounts_powered_by_bike_index")
+          %br
           - if signup_page
-            %p
-              = t(".powered_by_bike_index")
-              = t(".signup_message")
+            = t(".sign_up_message")
           - else
-            %p
-              = t(".powered_by_bike_index")
-              = t(".login_message")
+            = t(".log_in_message")
 
-    = render "layouts/revised_messages"
-    = yield
 
-    .container.bikehub-explanation{ style: "margin-top: 60px;" }
-      .row
-        .col-sm-12
-          %h2
-            = t(".why_bikeindex")
-      .row
-        .col-sm-12
-          %p= t(".bikeindex_a_nonprofit")
-          %p= t(".bike_security")
-          %p= t(".bikeindex_bikehub_partnership")
+      = render "layouts/revised_messages"
+      = yield
+
 
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
