Set height on search results rows

--- a/app/assets/stylesheets/revised/sections/bike_boxes.scss
+++ b/app/assets/stylesheets/revised/sections/bike_boxes.scss
@@ -72,6 +72,7 @@ $bike-box-bg: $gray-lighter;
 .bike-list-image {
   display: inherit;
   flex: 0 0 20%;
+  height: 200px;
   position: relative;
 
   img {
