Move stolen_location logic into address_location
- Kills StolenRecord#address_short
- Maintains consistency across bike listing types and locations
- Provides `include_all` param to display all available location components
  unconditionally

--- a/app/views/bikes/_bike.html.haml
+++ b/app/views/bikes/_bike.html.haml
@@ -19,4 +19,4 @@
               = bike.abandoned ? t(".abandoned") : t(".stolen")
             %span.convertTime
               = l bike.current_stolen_record.date_stolen, format: :convert_time
-          = bike.attr_list_item(bike.short_address(bike.current_stolen_record), t(".location"))
+          = bike.attr_list_item(bike.current_stolen_record.address_location(include_all: true), t(".location"))
