--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -69,7 +69,7 @@
         %h3.secondary-matches#js-partial-serial-search-header
           .loading.d-none= t(".searching_for_near_matches")
           .loaded.d-none= t(".with_serial_numbers_html", stolenness: stolenness_desc, serial: params[:serial])
-          .loaded-none.no-exact-results.d-none= t("no_near_matches_found")
+          .loaded-none.no-exact-results.d-none= t(".no_near_matches_found")
         #js-partial-serial-search
 
     .row
