--- a/app/views/admin/external_registry_credentials/_form.html.haml
+++ b/app/views/admin/external_registry_credentials/_form.html.haml
@@ -3,11 +3,11 @@
   method: method,
   html: { class: "form" } do |f|
   %fieldset
-    = f.label :type, class: "form-label"
-    = f.select :type, external_registry_type_options, class: "form-control"
+    = f.label :type, "Type (required)", class: "form-label"
+    = f.select :type, external_registry_type_options, include_blank: true, class: "form-control"
 
   %fieldset
-    = f.label :app_id, "App ID", class: "form-label"
+    = f.label :app_id, "App ID (required)", class: "form-label"
     = f.text_field :app_id, class: "form-control"
 
   %fieldset
@@ -15,7 +15,7 @@
     = f.text_field :access_token, class: "form-control"
 
   %fieldset
-    = f.label :refresh_token, class: "form-label"
+    = f.label :refresh_token, "Refresh token (required)", class: "form-label"
     = f.text_field :refresh_token, class: "form-control"
 
   %br
