--- a/app/views/shared/_modal.html.haml
+++ b/app/views/shared/_modal.html.haml
@@ -20,3 +20,12 @@
 - if start_open && id.present?
   :javascript
     $(document).ready(function() { $("##{id}").modal("show"); });
+
+:javascript
+  $(function() {
+    $("body").on("keyup", (e) => {
+      const ESC = 27;
+      if (e.keyCode !== ESC) { return; }
+      $("##{id}").modal("hide");
+    });
+  });
