--- a/app/views/admin/bikes/_theft_alert_images.html.haml
+++ b/app/views/admin/bikes/_theft_alert_images.html.haml
@@ -9,11 +9,57 @@
     - alert_image_versions.each do |name, image|
       .col-3.col-lg-2
         = link_to image.url, target: "_blank" do
-          = image_tag image.url, class: "ml-auto mr-auto", style: "display: block; max-width: 150px; height: auto;"
+          = image_tag image.url,
+            class: "ml-auto mr-auto",
+            style: "display: block; max-width: 150px; height: auto;"
         .text-center= name
     .col-3.col-lg-2
-      = link_to "Regenerate",
-        regenerate_alert_image_admin_stolen_bike_path(bike),
-        method: :patch,
-        data: { confirm: "Are you sure you want to regenerate promoted alert images?" },
-        class: "btn btn-danger mb-4"
+      = button_tag "Update / Regenerate promoted alert image",
+        id: "js-alert-image-regenerate",
+        class: "btn btn-primary mb-4"
+
+- modal_body = capture_haml do
+  - first_image, *bike_images = bike.public_images
+
+  - if first_image.blank?
+    No images available
+  - else
+    = form_tag regenerate_alert_image_admin_stolen_bike_path(bike),
+      method: :patch, class: "alert-image-regenerate-form" do |f|
+      .modal-body.text-center
+        .row.mt-2.mb-4
+          = image_tag first_image.image_url(:small),
+            class: "js-alert-image-option m-2 ml-auto mr-auto",
+            style: "cursor: pointer; border: 5px solid #3498db;",
+            data: { public_image_id: first_image.id }
+        .row.mt-2.mb-4
+          - bike_images.to_a.each do |image|
+            = image_tag image.image_url(:small),
+              class: "js-alert-image-option m-2 ml-auto mr-auto",
+              style: "cursor: pointer; border: 5px solid #fff;",
+              data: { public_image_id: image.id }
+
+        = hidden_field_tag :public_image_id, first_image.id
+        = submit_tag "Update promoted alert images", class: "btn btn-primary btn-md m-auto"
+
+
+= render partial: "shared/modal",
+  locals: { title: "Select an image to use in the promoted alert", id: "chooseTheftAlertImageModal", modal_body: modal_body }
+
+:javascript
+  $("body").on("click", "#js-alert-image-regenerate", () => {
+    $("#chooseTheftAlertImageModal").modal("show");
+  })
+
+:javascript
+  $("body").on("click", ".js-alert-image-option", (e) => {
+    $selectedImage = $(e.target);
+
+    $form = $(e.target).closest("form");
+    $images = $form.find("img");
+    $images.attr("style", "cursor: pointer; border: 5px solid #fff;");
+
+    selectedImageId = $selectedImage.data("publicImageId")
+    $form.find("#public_image_id").val(selectedImageId)
+    $selectedImage.attr("style", "border: 5px solid #3498db;")
+  });
