Reorganize promoted alerts form, emphasize

--- a/app/assets/stylesheets/revised/sections/form_well_menu.scss
+++ b/app/assets/stylesheets/revised/sections/form_well_menu.scss
@@ -14,6 +14,13 @@ $menu-select-overlay-line-height: 12px;
     li {
       display: block;
 
+      &.edit-menu-alert {
+        a h4 {
+          color: $red;
+          font-weight: 700;
+        }
+      }
+
       &.edit-menu-ownership {
         border-top: 1px solid $gray-light;
       }
