Use utility style class, set alt text

--- a/app/views/bikes/edit_theft_details.html.haml
+++ b/app/views/bikes/edit_theft_details.html.haml
@@ -107,7 +107,9 @@
         your stolen bike for you?
 
       %div.mb-4.text-center
-        = image_tag "promoted_alerts/sample.jpg", style: "max-width: 500px;", class: "m-auto"
+        = image_tag "promoted_alerts/sample.jpg",
+          alt: "Sample Promoted Alert Image",
+          class: "m-auto mw-100"
 
       %p
         Bike Index's new Promoted Theft Alert service gets eyes on your bike by
